--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -2,7 +2,7 @@ applications:
 - name: tracker-allocations
   path: ./applications/allocations-server/build/libs/allocations-server.jar
   routes:
-  - route: allocations-pal-${UNIQUE_IDENTIFIER}.${DOMAIN}
+    - route: pal-tracker-allocations-abhay.apps.dev.pcf-aws.com
   memory: 1G
   instances: 1
   env:
