--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -2,7 +2,8 @@ applications:
 - name: tracker-timesheets
   path: ./applications/timesheets-server/build/libs/timesheets-server.jar
   routes:
-  - route: timesheets-pal-${UNIQUE_IDENTIFIER}.${DOMAIN}
+    - route: pal-tracker-timesheets-abhay.apps.dev.pcf-aws.com
+
   memory: 1G
   instances: 1
   env:
