--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -7,7 +7,7 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://${REGISTRATION_SERVER_ROUTE}
+    REGISTRATION_SERVER_ENDPOINT: https://pal-tracker-registration-abhay.apps.dev.pcf-aws.com
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-timesheets-database
