--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
         junitVersion = "4.12"
         okhttpVersion = "3.12.0"
         jsonPathVersion = "2.4.0"
+        springCloudVersion = "2.0.2.RELEASE"
+        springCloudServicesClientLibrariesVersion = "2.0.2.RELEASE"
     }
 
     repositories {
