--- a/applications/registration-server/src/main/resources/application.properties
+++ b/applications/registration-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-rgspring.application.name=registration-server
+spring.application.name=registration-server
 
 server.port=8083
 spring.datasource.username=tracker
